microservices/ingress/eks-deploy/eks-alb-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: ragnarok
  name: ragnarok-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
  - http:
      paths:
      - path: /sink-admin
        pathType: Prefix
        backend:
          service:
            name: sink-service
            port:
              number: 80
      - path: /sink-orders
        pathType: Prefix
        backend:
          service:
            name: sink-service
            port:
              number: 80
      - path: /ingest-status
        pathType: Prefix
        backend:
          service:
            name: ingestor-service
            port:
              number: 80
      - path: /ingest-start
        pathType: Prefix
        backend:
          service:
            name: ingestor-service
            port:
              number: 80
      - path: /ingestor-admin
        pathType: Prefix
        backend:
          service:
            name: ingestor-service
            port:
              number: 80
      - path: /streamer-admin
        pathType: Prefix
        backend:
          service:
            name: streamer-service
            port:
              number: 80
      - path: /streamer-refresh
        pathType: Prefix
        backend:
          service:
            name: streamer-service
            port:
              number: 80
      - path: /streamer-backup
        pathType: Prefix
        backend:
          service:
            name: streamer-service
            port:
              number: 80
      - path: /streamer-backup-status
        pathType: Prefix
        backend:
          service:
            name: streamer-service
            port:
              number: 80
      - path: /streamer-restore
        pathType: Prefix
        backend:
          service:
            name: streamer-service
            port:
              number: 80
      - path: /streamer-restore-status
        pathType: Prefix
        backend:
          service:
            name: streamer-service
            port:
              number: 80
      - path: /streamer-status
        pathType: Prefix
        backend:
          service:
            name: streamer-service
            port:
              number: 80
      - path: /streamer-start
        pathType: Prefix
        backend:
          service:
            name: streamer-service
            port:
              number: 80
      - path: /loader-admin
        pathType: Prefix
        backend:
          service:
            name: loader-service
            port:
              number: 80
      - path: /selected
        pathType: Prefix
        backend:
          service:
            name: loader-service
            port:
              number: 80
      - path: /ingestorselected
        pathType: Prefix
        backend:
          service:
            name: ingestor-service
            port:
              number: 80
      - path: /streamerselected
        pathType: Prefix
        backend:
          service:
            name: streamer-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 80
      - path: /prometheus
        pathType: Prefix
        backend:
          service:
            name: prometheus-service
            port:
              number: 8080
